--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
         <div class="loading-progress-text"></div>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
-    <script>navigator.serviceWorker.register('service-worker.js');</script>
+    <!--<script>navigator.serviceWorker.register('service-worker.js');</script> -->
+    
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
 
     <script>
