--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NeoGénie</title>
-    <base href="/neogenie-site/" />
+    <base href="/" />
     <link rel="stylesheet" href="css/app.css" />
 
     <link href="manifest.webmanifest" rel="manifest" />
